# starshine

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.starshine-contract-patch/: part-00  part-01  part-02  part-03
.starshine-explain-patch/: diagnostics.txt  part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-06a  part-06b  part-06b1  part-06b2  part-06b2a  part-06b2b  part-06b2c  part-06b2d  part-07
.starshine-graph-patch/: diagnostics.txt  part-00  part-01  part-02  part-03  part-03a  part-03b  part-04  part-05  part-06  part-07  part-08  part-09  part-10  part-11  part-12  part-13  part-14  part-15
.starshine-metrics-patch/: diagnostics.txt  part-00  part-00a  part-00b  part-01  part-02  part-03  part-04  part-04a  part-04b  part-05  part-05a  part-05b  part-06  part-07  part-08  part-09  part-10  part-11
.starshine-patch/: checksums.txt  part-00  part-01  part-02  part-03  part-04  part-040  part-041  part-05  part-06  part-07  part-08  part-09  part-10
.starshine-preflight-patch/: part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07  part-08  part-09  part-10
benchmarks/: __init__.py  corpus.py  run.py  verify.py
docs/: .clip-pr-marker  ARCHITECTURE.md  BENCHMARKS.md  CLIP.md  GEOMETRY_METRICS.md  GEOPACKAGE.md  INSPECTION.md  NEAREST.md  OPEN_SOURCE_SCOPE.md  OPERATORS.md  PROJECT_HISTORY.md  RELEASE_PROCESS.md  REPRODUCIBILITY.md  SPATIAL_JOIN.md  TEACHING_FAILURES.md  VALIDATION.md  WORKFLOW_CONTRACTS.md  WORKFLOW_EXPLAIN.md  WORKFLOW_GRAPH.md  WORKFLOW_PLANNING.md  WORKFLOW_PREFLIGHT.md  WORKFLOW_VALIDATION.md
examples/: geometry-metrics.workflow.json  nearest.workflow.json  plan.workflow.contract.md  plan.workflow.explanation.md  plan.workflow.json  plan.workflow.mmd  plan.workflow.preflight.md  run_demo.py  spatial-join.workflow.json  workflow.json
schemas/: benchmark-report-v1.schema.json  inspection-report-v1.schema.json  operator-catalog-v1.schema.json  workflow-contract-v1.schema.json  workflow-explanation-v1.schema.json  workflow-graph-v1.schema.json  workflow-plan-v1.schema.json  workflow-preflight-v1.schema.json  workflow-v1.schema.json
scripts/: audit_public_repository.py  check_benchmark_report.py  check_release_artifacts.py  check_release_readiness.py  smoke_installed_wheel.py  verify_teaching_examples.py
tests/: test_benchmarks.py  test_cli_validation.py  test_clip.py  test_geometry_metrics.py  test_geopackage.py  test_geopackage_roundtrip.py  test_inspection.py  (+16 more)
(+64 files in other folders)
