[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "starshine-geo"
version = "0.1.0"
description = "A small, auditable core for reproducible geospatial workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Starshine maintainers" }]
keywords = ["gis", "geospatial", "geojson", "workflow", "spatial-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "pyproj>=3.6,<4",
  "shapely>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]
geopackage = ["geopandas>=1.0,<2", "pyogrio>=0.9,<1"]

[project.scripts]
starshine = "starshine_geo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/starshine_geo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
