[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "starshine-geo"
version = "0.3.0"
description = "A small, auditable core for reproducible geospatial workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Starshine maintainers" }]
keywords = ["gis", "geospatial", "geojson", "workflow", "spatial-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "pyproj>=3.6,<4",
  "shapely>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/liu2024whu-bit/starshine"
Repository = "https://github.com/liu2024whu-bit/starshine"
Issues = "https://github.com/liu2024whu-bit/starshine/issues"
Changelog = "https://github.com/liu2024whu-bit/starshine/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23,<5",
  "pytest>=8,<10",
  "ruff>=0.5,<1",
  "tomli>=2,<3; python_version < '3.11'",
]
geopackage = ["geopandas>=1.0,<2", "pyogrio>=0.9,<1"]
release = [
  "build>=1.2,<2",
  "tomli>=2,<3; python_version < '3.11'",
  "twine>=5,<7",
]

[project.scripts]
starshine = "starshine_geo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/starshine_geo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
